--- a/vercel.json
+++ b/vercel.json
@@ -5,12 +5,12 @@
   "framework": "nextjs",
   "regions": ["iad1"],
   "env": {
-    "GEMINI_API_KEY_PRIMARY": "@gemini_api_key_primary",
-    "GEMINI_API_KEY_SECONDARY": "@gemini_api_key_secondary",
-    "GEMINI_API_KEY_EXTRA_1": "@gemini_api_key_extra_1",
-    "GEMINI_API_KEY_EXTRA_2": "@gemini_api_key_extra_2",
-    "GEMINI_API_KEY_EXTRA_3": "@gemini_api_key_extra_3",
-    "GEMINI_API_KEY_EXTRA_4": "@gemini_api_key_extra_4",
-    "GEMINI_API_KEY_EXTRA_5": "@gemini_api_key_extra_5"
+    "GEMINI_API_KEY_PRIMARY": "AIzaSyDyib_HLvpwt7W1RWBYslHu46ysDzRYvSQ",
+    "GEMINI_API_KEY_SECONDARY": "AIzaSyDw8lC4aLapTIC_D5j5mCI_rMyMcd6vnXE",
+    "GEMINI_API_KEY_EXTRA_1": "AIzaSyC_SmO5178fdkcisaV-K4yE4VH5NPRStkU",
+    "GEMINI_API_KEY_EXTRA_2": "AIzaSyC_SmO5178fdkcisaV-K4yE4VH5NPRStkU",
+    "GEMINI_API_KEY_EXTRA_3": "AIzaSyC_SmO5178fdkcisaV-K4yE4VH5NPRStkU",
+    "GEMINI_API_KEY_EXTRA_4": "AIzaSyC_SmO5178fdkcisaV-K4yE4VH5NPRStkU",
+    "GEMINI_API_KEY_EXTRA_5": "AIzaSyC_SmO5178fdkcisaV-K4yE4VH5NPRStkU"
   }
 }
